include_directories(../src)
add_executable(test_ct_kitti test_ct_odom_kitti.cpp)
target_link_libraries(test_ct_kitti PUBLIC CT_ICP TCLAP Ceres::ceres glog::glog Eigen3::Eigen OpenMP::OpenMP_CXX)
install(TARGETS test_ct_kitti DESTINATION ${CT_ICP_RUNTIME_DESTINATION})
if (WITH_VIZ3D)
    target_link_libraries(test_ct_kitti PUBLIC viz3d)
    target_compile_definitions(test_ct_kitti PUBLIC CT_ICP_WITH_VIZ=1)
endif ()

add_executable(test_localization test_localization.cpp)
target_link_libraries(test_localization PUBLIC LOCALIZATION CT_ICP TCLAP Ceres::ceres glog::glog Eigen3::Eigen OpenMP::OpenMP_CXX)
install(TARGETS test_localization DESTINATION ${CT_ICP_RUNTIME_DESTINATION})
if (WITH_VIZ3D)
    target_link_libraries(test_localization PUBLIC viz3d)
    target_compile_definitions(test_localization PUBLIC CT_ICP_WITH_VIZ=1)
endif ()

add_executable(read_map read_map.cpp)
target_link_libraries(read_map PUBLIC LOCALIZATION CT_ICP TCLAP Ceres::ceres glog::glog Eigen3::Eigen OpenMP::OpenMP_CXX)
install(TARGETS read_map DESTINATION ${CT_ICP_RUNTIME_DESTINATION})
if (WITH_VIZ3D)
    target_link_libraries(read_map PUBLIC viz3d)
    target_compile_definitions(read_map PUBLIC CT_ICP_WITH_VIZ=1)
endif ()


if (WITH_ROS)
    add_executable(kitti2ros kitti2ros.cpp)
    target_link_libraries(kitti2ros PUBLIC LOCALIZATION CT_ICP TCLAP Ceres::ceres glog::glog Eigen3::Eigen OpenMP::OpenMP_CXX ${catkin_LIBRARIES})
endif ()
